# hera

./: .env.local  .gitignore  .syncthing.Cargo.lock.tmp  .syncthing.Cargo.toml.tmp  .syncthing.README.md.tmp  CLAUDE.md  Cargo.toml
diakonos-core/: Cargo.toml
diakonos-core/config/: modules.json
diakonos-core/src/: client.rs  lib.rs  main.rs  modules.rs  protocol.rs  server.rs
diakonos-core/src/handlers/: core.rs  media.rs  mod.rs  web.rs  workflow.rs
docs/: .syncthing.HERA_VETRA_AGENT_GUIDE.md.tmp  HERA_VETRA_CAPABILITIES_MATRIX.md  MEMENTO_ARCHITECTURE.md
examples/: .syncthing.test_ipc_draw.py.tmp
hera-core/: .syncthing.final_test.pdf.tmp  Cargo.toml  README.md
hera-core/docs/: .syncthing.user_guide.md.tmp  CAPABILITY_REFACTOR_PLAN.md
hera-core/examples/: .syncthing.mock_ipc_client.rs.tmp  mock_ipc_client.rs
hera-core/scripts/: .syncthing.claude-hera.tmp  .syncthing.claude.tmp  .syncthing.install_claude_cli.sh.tmp  .syncthing.install_claude_code_hera.sh.tmp  .syncthing.install_claude_hera.sh.tmp  claude-code-hera  faster_whisper_stt.py
hera-core/src/: .syncthing.lib.rs.tmp  .syncthing.semantic_object.rs.tmp  ipc_server.rs  lib.rs  main.rs  rest_api.rs  semantic_object.rs  sol.rs  watchdog.rs
hera-core/src/ai/: .syncthing.cloud_budget.rs.tmp  .syncthing.context_engine.rs.tmp  .syncthing.embeddings.rs.tmp  .syncthing.engine_flux.rs.tmp  .syncthing.engine_gguf.rs.tmp  .syncthing.engine_hub.rs.tmp  .syncthing.engine_moondream.rs.tmp  .syncthing.engine_parler.rs.tmp  .syncthing.mod.rs.tmp  .syncthing.native_engine.rs.tmp  .syncthing.q8_t5.rs.tmp  .syncthing.quantized_qwen3_moe_local.rs.tmp  .syncthing.router.rs.tmp  context_engine.rs  engine_faster_whisper.rs  engine_flux.rs  engine_gguf.rs  engine_hub.rs  engine_moondream.rs  engine_parler.rs  engine_whisper.rs  gemini.rs  llama_ffi_engine.rs  mod.rs  native_engine.rs  openai_compat.rs  q8_t5.rs  q8_t5.rs.orig  q8_t5.rs.rej  quantized_qwen3_moe_local.rs  router.rs  tool_executor.rs
hera-core/src/ai/tool_executor/: .syncthing.intent.rs.tmp  .syncthing.mod.rs.tmp  dispatch.rs  intent.rs  mod.rs  registry.rs  schema.rs  security.rs
hera-core/src/ai/tools/: .syncthing.apps_construvendo.rs.tmp  .syncthing.apps_latinos.rs.tmp  .syncthing.apps_movilo.rs.tmp  .syncthing.apps_vetra.rs.tmp  .syncthing.email_imap.rs.tmp  .syncthing.infra_health.rs.tmp  .syncthing.infra_smoke.rs.tmp  .syncthing.productivity.rs.tmp  .syncthing.storage.rs.tmp  apps_construvendo.rs  apps_latinos.rs  apps_movilo.rs  apps_shop.rs  apps_vetra.rs  brand_studio.rs  browser.rs  build_feedback.rs  cloud_escalation.rs  code_graph.rs  coding.rs  data.rs  deploy.rs  geo.rs  infra_health.rs  infra_smoke.rs  mission_control.rs  mod.rs  platform.rs  productivity.rs
hera-core/src/ai/tools/platform/: .syncthing.code.rs.tmp  .syncthing.workspace.rs.tmp  code.rs  media.rs
hera-core/src/api/: README_UNIVERSAL_EXTRACTION.md  agent_canvas.rs  excel.rs  mod.rs  nodes.rs  pdf_assembler.rs  routes.rs  universal_extract.rs  workspace.rs
hera-core/src/capabilities/: .syncthing.mod.rs.tmp  mod.rs
hera-core/src/hardware/: .syncthing.docker.rs.tmp  .syncthing.mod.rs.tmp  docker.rs  rbac.rs
hera-core/src/ipc/: .syncthing.agentic_loop.rs.tmp  .syncthing.difficulty.rs.tmp  .syncthing.handler_audio.rs.tmp  .syncthing.handler_delegation.rs.tmp  .syncthing.handler_embed.rs.tmp  .syncthing.handler_lora.rs.tmp  .syncthing.llm_audit.rs.tmp  .syncthing.mod.rs.tmp  agentic_loop.rs  argus_client.rs  context.rs  handler_argus.rs  handler_audio.rs  handler_dag.rs  handler_delegation.rs  handler_embed.rs  handler_generate.rs  handler_health.rs  handler_lora.rs  handler_media.rs  handler_media.sync-conflict-20260711-190348-GMMVLB6.rs  handler_stream.rs  handler_tools.rs  helpers.rs  inflight.rs  llm_audit.rs  media_safety.rs  mod.rs  route_profiles.rs  runtime_tools.rs  types.rs
hera-core/src/orchestrator/: .syncthing.bayesian_assistant.rs.tmp  .syncthing.feedback.rs.tmp  .syncthing.mod.rs.tmp  .syncthing.movilo_integration.rs.tmp  .syncthing.preference_model.rs.tmp  .syncthing.simulator.rs.tmp  .syncthing.training_data.rs.tmp  bayesian_assistant.rs  benchmark.rs  feedback.rs  fine_tune.rs  mod.rs  movilo_integration.rs  preference_model.rs  simulator.rs  training_data.rs
hera-core/tests/: ipc_integration.rs
hera-docs/: .syncthing.Cargo.toml.tmp  Cargo.toml
hera-docs/src/tools/: .syncthing.definitions.rs.tmp  .syncthing.native_xls.rs.tmp  mod.rs  native_ocr.rs
hera-execution/: .syncthing.Cargo.toml.tmp  Cargo.toml
hera-execution/src/: dify.rs  lib.rs  workflow.rs
hera-execution/src/agents/: hera.rs  mod.rs
hera-execution/src/mcp/: .syncthing.client.rs.tmp  .syncthing.mod.rs.tmp  .syncthing.types.rs.tmp
hera-execution/src/memory/: lance.rs  mod.rs
hera-execution/src/tools/: .syncthing.definitions.rs.tmp  .syncthing.native_ocr.rs.tmp  mod.rs  native_ocr.rs  native_xls.rs
hera-market/: .syncthing.Cargo.toml.tmp
hera-market/src/: .syncthing.lib.rs.tmp
hera-vector/: Cargo.toml
hera-vector/src/memory/: .syncthing.lance.rs.tmp
hera-web/: Cargo.toml
hera-web/src/agents/: hera.rs  mod.rs
hera-web/src/mcp/: .syncthing.client.rs.tmp  types.rs
scripts/: .syncthing.canvas_wan21.py.tmp  .syncthing.start_canvas.sh.tmp  .syncthing.start_native_omni.sh.tmp  .syncthing.start_release.sh.tmp  canvas_wan21.py  start_canvas.sh  start_native_draw.sh  start_native_omni.sh
