[package]
name = "diakonos-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
hera-execution = { path = "../hera-execution" }
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.18"

[lib]
name = "diakonos_core"

[[bin]]
name = "diakonos-core"
path = "src/main.rs"
