[package]
name = "hera-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
futures-util = "0.3.31"
parking_lot = "0.12.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.18"
regex = "1.11.1"
lazy_static = "1.5.0"
axum = { version = "0.8.8", features = ["multipart"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
base64 = "0.22.1"
async-trait = "0.1.86"
hera-execution = { path = "../hera-execution" }

# Native AI Execution Engine
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }
hf-hub = "0.5.0"
tokenizers = { version = "0.22.2", features = ["http"] }
image = "0.25.9"
anyhow = "1.0.102"
hound = "3.5.1"
byteorder = "1.5.0"
bytes = "1.11.1"
llama-cpp-2 = { version = "0.1.138", default-features = false, features = ["cuda"] }
encoding_rs = "0.8.35"
calamine = "0.34.0"
genpdf = "0.2.0"

[[bin]]
name = "test_flux"
path = "src/bin/test_flux.rs"
