[package]
name = "hera-core"
version = "0.1.0"
edition = "2024"

[features]
# Default is CPU-only router. LLM inference is delegated to external modules
# (llama-server / candle-server) via HERA_PRIMARY_OMNI_URL and friends.
# Single binary deploys to all nodes regardless of GPU presence.
default = ["vision", "audio", "desktop-control", "execution-tools"]
# Opt-in feature for edge nodes that need local inference (requires CUDA at runtime).
local-llm = ["dep:candle-core", "dep:candle-transformers", "dep:candle-nn", "dep:hf-hub", "dep:tokenizers", "dep:hound", "dep:llama-cpp-2"]
vision = []
audio = []
desktop-control = []
execution-tools = ["dep:hera-execution", "hera-execution/default"]
mcp-bridge = ["dep:rmcp", "dep:schemars"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
futures-util = "0.3.31"
parking_lot = "0.12.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.18"
regex = "1.11.1"
lazy_static = "1.5.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }
base64 = "0.22.1"
async-trait = "0.1.86"
hera-execution = { path = "../hera-execution", optional = true }
hera-web = { path = "../hera-web" }

# Native AI Execution Engine — optional, gated on local-llm feature
candle-core = { version = "0.9.2", features = ["cuda"], optional = true }
candle-transformers = { version = "0.9.2", features = ["cuda"], optional = true }
candle-nn = { version = "0.9.2", features = ["cuda"], optional = true }
hf-hub = { version = "0.5.0", optional = true }
tokenizers = { version = "0.22.2", features = ["http"], optional = true }
image = "0.25.9"
anyhow = "1.0.102"
hound = { version = "3.5.1", optional = true }
byteorder = "1.5.0"
bytes = "1.11.1"
llama-cpp-2 = { version = "0.1.138", default-features = false, features = ["cuda"], optional = true }
encoding_rs = "0.8.35"
calamine = "0.34.0"
genpdf = "0.2.0"
urlencoding = "2.1.3"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
enigo = "0.6.1"
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"], optional = true }
schemars = { version = "1", optional = true }

[[bin]]
name = "test_flux"
path = "src/bin/test_flux.rs"
required-features = ["local-llm"]

[[bin]]
name = "hera_mcp"
path = "src/bin/hera_mcp.rs"
required-features = ["mcp-bridge"]
