[package]
name = "hera-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
reqwest = { version = "0.12.28", features = ["json"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
urlencoding = "2.1"
uuid = { version = "1.22.0", features = ["v4"] }
rand = "0.9"

[lib]
name = "hera_web"
